Bug 403826 - Transactions without category assignment are not shown in report
Summary: Transactions without category assignment are not shown in report
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: reports (other bugs)
Version First Reported In: 5.0.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-01 10:30 UTC by Thomas Baumgart
Modified: 2019-02-02 09:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.4
Sentry Crash Report:


Attachments
Testfile with just one unassigned transaction (865 bytes, application/x-kmymoney)
2019-02-01 10:30 UTC, Thomas Baumgart
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2019-02-01 10:30:31 UTC
Created attachment 117773 [details]
Testfile with just one unassigned transaction

SUMMARY
In case a transaction is not assigned to a category it is not shown in the e.g. 'transactions by account' report.

STEPS TO REPRODUCE
1. Open attached test file
2. Select Report view
3. Open the 'Transactions by account'  report

OBSERVED RESULT
Report shows correct opening and closing balance but no transaction

EXPECTED RESULT
Report shows correct opening and closing balance and transaction


ADDITIONAL INFORMATION
Actually, none of the 'transactions by ...' show the transaction.
Comment 1 Thomas Baumgart 2019-02-02 09:16:19 UTC
Git commit b7368fba5aed7ec0781f60950def20133cba246b by Thomas Baumgart.
Committed on 02/02/2019 at 09:15.
Pushed by tbaumgart into branch '5.0'.

Fix reports to show unassigned transactions

This also fixes some problems with the transaction report by tags
Related: bug 368159
FIXED-IN: 5.0.4

M  +44   -31   kmymoney/plugins/views/reports/core/querytable.cpp

https://commits.kde.org/kmymoney/b7368fba5aed7ec0781f60950def20133cba246b