Fix reports to show unassigned transactions

This also fixes some problems with the transaction report by tags

BUG: 403826
BUG: 368159
FIXED-IN: 5.0.4